--- a/Sources/resources/styles.css
+++ b/Sources/resources/styles.css
@@ -26,7 +26,7 @@
   width: 20;
   height: 40;
 }
-.battery-bar-container{
+#battery-bar-container{
   y: 100%-4;
 }
 #battery-bar-background{
@@ -101,23 +101,23 @@
   width: 25;
   height: 50;
 }
-.legend image{
+#legend image{
   height: 25;
   width: 25;
 }
-.legend .stats-steps-container{ 
+#legend .stats-steps-container{ 
   href:"images/stat_steps_solid_48px.png";
 }
-.legend .stats-floors-container{ 
+#legend .stats-floors-container{ 
   href:"images/stat_floors_solid_48px.png";
 }
-.legend .stats-cals-container{ 
+#legend .stats-cals-container{ 
   href:"images/stat_cals_solid_48px.png";
 }
-.legend .stats-am-container{ 
+#legend .stats-am-container{ 
   href:"images/stat_am_solid_48px.png";
 }
-.legend .stats-dist-container{ 
+#legend .stats-dist-container{ 
   href:"images/stat_dist_solid_48px.png";
 }
 #arcs-container{
