--- a/Sources/resources/styles.css
+++ b/Sources/resources/styles.css
@@ -27,6 +27,15 @@
   width: 20;
   height: 40;
 }
+#ampm-container{
+  x:100%-50;
+  y:$+5;
+}
+#ampm-container image{
+  x:$;
+  width: 20;
+  height: 40;
+}
 #battery-bar-container{
   y: 100%-4;
 }
@@ -60,21 +69,6 @@
   height: 25;
   width: 25;
 }
-#legend .stats-steps-container{ 
-  href:"images/stat_steps_solid_48px.png";
-}
-#legend .stats-floors-container{ 
-  href:"images/stat_floors_solid_48px.png";
-}
-#legend .stats-cals-container{ 
-  href:"images/stat_cals_solid_48px.png";
-}
-#legend .stats-am-container{ 
-  href:"images/stat_am_solid_48px.png";
-}
-#legend .stats-dist-container{ 
-  href:"images/stat_dist_solid_48px.png";
-}
 #arcs-container{
   width:180;
   height:180;
@@ -90,7 +84,7 @@
   width: 100%;
   arc-width:10;
   sweepAngle:360;
-  opacity: 0.5;
+  opacity: 0.3;
 }
 #arcs-container .arc-value{
   height: 100%;
@@ -98,51 +92,33 @@
   arc-width:10;
   start-angle:0;
 }
-#arcs-container .stats-steps-container{ 
+#arcs-container .arc0{ 
   height: 100%;
   width: 100%;
 }
-#arcs-container .stats-floors-container{
+#arcs-container .arc1{
   height: 80%;
   width: 80%;
   x:10%;
   y:10%;
 }
-#arcs-container .stats-cals-container{
+#arcs-container .arc2{
   height: 60%;
   width: 60%;
   x:20%;
   y:20%;
 }
-#arcs-container .stats-am-container{
+#arcs-container .arc3{
   height: 40%;
   width: 40%;
   x:30%;
   y:30%;
 }
-#arcs-container .stats-dist-container{
+#arcs-container .arc4{
   height: 20%;
   width: 20%;
   x:40%;
   y:40%;
-}
-.stats-dist-container{
-  fill:blue;
-}
-.stats-steps-container{ 
-  fill:#FF0000;
-}
-.stats-floors-container{
-  fill:#FF0080;
-}
-.stats-cals-container{
-  fill:#FF8000;
-}
-.stats-am-container{
-  fill:green;
-}
-.stats-dist-container{
-  fill:blue;
 }
 #stats-container{
   x:0;
@@ -188,28 +164,24 @@
   height: 50;
 }
 
-#steps-container .stats-arc-container{
-  fill:lightblue;
-}
-#steps-container .stats-arc-container image{
+/* stats colors */
+.steps{
   href:"images/stat_steps_solid_48px.png";
+  fill:#FF0000;
 }
-
-#cals-container .stats-arc-container{
-  fill:orange;
-}
-#cals-container .stats-arc-container image{
+.calories{
   href:"images/stat_cals_solid_48px.png";
+  fill:#FF8000;
 }
-#am-container .stats-arc-container{
-  fill:yellow;
-}
-#am-container .stats-arc-container image{
+.activesminutes{
   href:"images/stat_am_solid_48px.png";
+  fill:green;
 }
-#dist-container .stats-arc-container{
+.distance{
+  href:"images/stat_dist_solid_48px.png";
   fill:blue;
 }
-#dist-container .stats-arc-container image{
-  href:"images/stat_dist_solid_48px.png";
+.elevation{
+  href:"images/stat_floors_solid_48px.png";
+  fill:#FF0080;
 }
